languages/montiarc-fe/src/test/resources/automaton/invalid/LowerCaseEnumeration.cd
package automaton.invalid;

classdiagram LowerCaseEnumeration {
  enum lowerCaseEnumeration {A, B, C;} // lower case name
}